B-F Backup Sandbox 30.4.12/src/objects/Pouring__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Pourings</relationshipLabel>
        <relationshipName>Pourings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pouring_Amount__c</fullName>
        <label>Pouring Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Pourings</relationshipLabel>
        <relationshipName>Pourings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Volume_Distribution__c</fullName>
        <label>Sales Volume/Distribution</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Pouring_Amount__c</fullName>
        <formula>Pouring_Amount__c  *  Sales_Volume_Distribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Pouring Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Pouring</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Pouring Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pourings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>